--- a/beyond-parent/beyond/.settings/org.eclipse.wst.common.component
+++ b/beyond-parent/beyond/.settings/org.eclipse.wst.common.component
@@ -7,6 +7,9 @@
         <dependent-module archiveName="beyond-chat-1.0.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/beyond-chat/beyond-chat">
             <dependency-type>uses</dependency-type>
         </dependent-module>
+        <dependent-module archiveName="beyond-redis-1.0.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/beyond-redis/beyond-redis">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="context-root" value="beyond"/>
         <property name="java-output-path" value="/beyond/target/classes"/>
     </wb-module>
